tests/parser/tests/cases/should_fail/malformed_function_literal_arrow/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:36
1 |   str_eq: (str, str) -> str = (a, b) = a == b;
  |                                      ^ here
  = note: unexpectedly encountered a `=`.
  = help: consider adding a `;`
